tests/negative/gold/import6_test.gold
tests/negative/import6_test.toit:5:24: error: Unresolved show 'foo'
import .import6_a show foo
                       ^~~
Compilation failed.
